Add ssl support, minor updates